--- a/index.html
+++ b/index.html
@@ -239,90 +239,199 @@
           
       <script>
 
-    // JavaScript code goes here
-    // Function to open the modal
-    function openModal(imageSrc, description) {
-      var modal = document.getElementById("myModal");
-      var modalImg = modal.querySelector("img");
-      var modalDescription = modal.querySelector("p");
+    // JavaScript code
+// Function to open the modal and display the image and description
+function openModal(imageSrc, description) {
+  var modal = document.getElementById("myModal");
+  var modalImg = modal.querySelector("img");
+  var modalDescription = modal.querySelector("p");
 
-      modalImg.src = imageSrc;
-      modalDescription.textContent = description;
+  modal.style.display = "block";
+  modalImg.src = imageSrc;
+  modalDescription.innerText = description;
+}
 
-      modal.style.display = "block";
+// Function to close the modal
+function closeModal() {
+  var modal = document.getElementById("myModal");
+  modal.style.display = "none";
+}
+
+// Event listener for the close button in the modal
+var closeButton = document.querySelector(".close");
+closeButton.addEventListener("click", closeModal);
+
+// Event listener for the navbar toggle button
+var navbarToggler = document.querySelector(".navbar-toggler");
+var navbarCollapse = document.querySelector(".navbar-collapse");
+navbarToggler.addEventListener("click", function () {
+  navbarCollapse.classList.toggle("show");
+});
+
+// Event listener for smooth scrolling when clicking on a navigation link
+var navLinks = document.querySelectorAll(".navbar-nav a");
+for (var i = 0; i < navLinks.length; i++) {
+  navLinks[i].addEventListener("click", function (event) {
+    event.preventDefault();
+    var targetSectionId = this.getAttribute("href").substring(1);
+    var targetSection = document.getElementById(targetSectionId);
+    targetSection.scrollIntoView({ behavior: "smooth" });
+  });
+}
+
+// Event listener for the search form submission
+var searchForm = document.querySelector("form[role='search']");
+searchForm.addEventListener("submit", function (event) {
+  event.preventDefault();
+  var searchInput = this.querySelector("input[type='search']");
+  var searchTerm = searchInput.value;
+  // Perform search operation with the searchTerm
+  // ...
+  // Clear the search input field
+  searchInput.value = "";
+});
+
+// Function to perform the search operation
+function performSearch(searchTerm) {
+  // Perform search operation with the searchTerm
+  // ...
+  // Display the search results
+  // ...
+}
+
+// Function to set the search term as the keyword for the page
+function setSearchKeyword(keyword) {
+  document.querySelector("meta[name='keywords']").setAttribute("content", keyword);
+}
+
+// JavaScript code
+
+// Function to perform the search operation
+function performSearch(searchTerm) 
+  // Perform search operation with the searchTerm
+  // ...
+
+  // Simulating search results for demonstration purposes
+  var searchResults = [
+    {
+      title: "Search Result 1",
+      description: "This is the first search result.",
+      link: "https://jorgester.github.io/Courseproject-2/#Security%20Background/Clearance"
+    },
+    {
+      title: "Search Result 2",
+      description: "This is the second search result.",
+      link: "https://jorgester.github.io/Courseproject-2/#Government%20Resumes"
+    },
+    {
+      title: "Search Result 3",
+      description: "This is the third search result.",
+      link: "https://jorgester.github.io/Courseproject-2/#Government%20Agencies"
+    },
+    {
+      title: "Search Result 4",
+      description: "This is the fourth search result.",
+      link: "https://jorgester.github.io/Courseproject-2/#about"
+    },
+    {
+      title: "Search Result 5",
+      description: "This is the fifth search result.",
+      link: "https://jorgester.github.io/Courseproject-2/#Contact%20us"
     }
+  ];
 
-    // Function to close the modal
-    function closeModal() {
-      var modal = document.getElementById("myModal");
-      modal.style.display = "none";
-    }
+  // Display the search results
+  var resultsContainer = document.getElementById("search-results");
+  resultsContainer.innerHTML = ""; // Clear previous search results
 
-    // Add event listeners to close the modal when clicking on the close button or outside the modal
-    document.querySelector(".close").addEventListener("click", closeModal);
-    window.addEventListener("click", function (event) {
-      var modal = document.getElementById("myModal");
-      if (event.target === modal) {
-        closeModal();
-      }
-    });
-
-   // Sample data for demonstration
-// Sample data for demonstration
-// Sample data for demonstration
-var data = [
-  "Security Background/Clearance",
-  "Government Resumes",
-  "Government Agencies",
-  "About Us",
-  "Contact Us"
-];
-
-// Function to perform search
-function performSearch() {
-  var searchInput = document.getElementById("searchInput").value.toLowerCase();
-  var navLinks = document.getElementsByClassName("nav-link");
-
-  // Loop through the navigation links and show/hide based on search term
-  for (var i = 0; i < navLinks.length; i++) {
-    var navLink = navLinks[i];
-    var linkText = navLink.innerText.toLowerCase();
-
-    if (linkText.includes(searchInput)) {
-      navLink.style.display = "block";
-    } else {
-      navLink.style.display = "none";
-    }
-  }
-
-  // Check if search query is in the data array
-  if (data.includes(searchInput)) {
-    // Redirect the user to the search results page
-    window.location.href = `/search?q=${encodeURIComponent(searchInput)}`;
+  if (searchResults.length === 0) {
+    var noResultsMessage = document.createElement("p");
+    noResultsMessage.textContent = "No results found.";
+    resultsContainer.appendChild(noResultsMessage);
   } else {
-    // Redirect the user back to the main page if search query not found
-    window.location.href = "/";
+    for (var i = 0; i < searchResults.length; i++) {
+      var result = searchResults[i];
+
+      var resultItem = document.createElement("div");
+      resultItem.classList.add("search-result");
+
+      var resultLink = document.createElement("a");
+      resultLink.href = result.link;
+      resultLink.textContent = result.title;
+
+      var resultDescription = document.createElement("p");
+      resultDescription.textContent = result.description;
+
+      var resultDescription = document.createElement("p");
+    resultDescription.textContent = result.description;
+
+    resultItem.appendChild(resultLink);
+    resultItem.appendChild(resultDescription);
+
+    resultsContainer.appendChild(resultItem);
   }
 }
 
-// Get the search form and search input
-const searchForm = document.querySelector('form[role="search"]');
-const searchInput = searchForm.querySelector('input[type="search"]');
+// Function to validate the contact form
+function validateForm() {
+  var nameInput = document.getElementById("name");
+  var emailInput = document.getElementById("email");
+  var messageInput = document.getElementById("message");
 
-// Add an event listener to the search form
-searchForm.addEventListener('submit', (event) => {
-  // Prevent the form from submitting and refreshing the page
+  // Validate name field
+  if (nameInput.value === "") {
+    alert("Please enter your name.");
+    nameInput.focus();
+    return false;
+  }
+
+  // Validate email field
+  if (emailInput.value === "") {
+    alert("Please enter your email.");
+    emailInput.focus();
+    return false;
+  }
+
+  // Validate message field
+  if (messageInput.value === "") {
+    alert("Please enter your message.");
+    messageInput.focus();
+    return false;
+  }
+
+  // If all fields are valid, submit the form
+  alert("Form submitted successfully!");
+  return true;
+}
+
+// Event listener for the contact form submission
+var contactForm = document.getElementById("contact-form");
+contactForm.addEventListener("submit", function (event) {
   event.preventDefault();
-
-  // Call the performSearch function
-  performSearch();
+  validateForm();
 });
 
+// Function to initialize the Google Map
+function initMap() {
+  var myLatLng = { lat: 37.7749, lng: -122.4194 }; // Coordinates for San Francisco
 
-   
+  // Create a map object and specify the DOM element for display
+  var map = new google.maps.Map(document.getElementById("map"), {
+    center: myLatLng,
+    zoom: 12
+  });
+
+  // Create a marker and set its position
+  var marker = new google.maps.Marker({
+    map: map,
+    position: myLatLng,
+    title: "San Francisco"
+  });
+}
+
           </script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
    </boby>
-   </html>`
+</html>
